Removed the horizontal line from bottom, and fixed the /about page alignment issue on desktop view.

--- a/static/main.css
+++ b/static/main.css
@@ -182,6 +182,7 @@ li {
 
 .about{
     width: 100%;
+    height: 100vh;
     background-color: black;
 }
 
